# diyt

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
assets/hp/: tokenizer.json
data/harry_potter/: README.md  corpus.txt  process.py  train.json
notebooks/: playground.ipynb
src/diyt/: fit_tokenizer.py  paths.py  pre_train.py  pre_train_config.yaml
src/diyt/model/: __init__.py  config.py  decoder_block.py  self_attention.py  transformer.py
src/diyt/tokenizer/: __init__.py  simple_tokenizer.py
tests/: test_simple_tokenizer.py
