[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diyt"
version = "0.1.0"
description = "Transformer architecture from scratch"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name="Helgi", email="helgi37@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
    # see requirements.txt
]

[tool.setuptools.packages.find]
where = ["src"]
